# Lattice

./: .dockerignore  .env.example  .gitignore  .railwayignore  ACTIVE_WALLET_TESTING.md  AGENTIC_TRIMMING_TEST_RESULTS.md  API_REFERENCE.md  BLE_STEALTH_DEPLOYMENT.md  CHAT_PROXIMITY_INTEGRATION.md  COINMARKETCAP_INTEGRATION.md  Cargo.toml  DATABASE_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  ENV_VARIABLES.md  FINAL_TEST_REPORT.md  FRONTEND_FIXES.md  HOTSPOT_SETUP.md  MESH_NETWORK_READY.md  MIGRATION.md  NGROK_DEPLOYMENT.md  P2P_MESH_SETUP.md  PROXIMITY_INTEGRATION_TODO.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  RUNNING.md  SERVICE_FIXES_SUMMARY.md  STEALTH_QUICK_START.md  TEST_RESULTS_SUMMARY.md  WALLET_FREEZE_FEATURE.md  WALLET_PRIMARY_FEATURE.md  check-status.sh  deploy-fly.sh  deploy-local.sh  docker-compose.yml  (+10 more)
crates/ai-service/: Cargo.toml
crates/ai-service/src/: consumer.rs  error.rs  lib.rs
crates/api/: AUTHENTICATION_IMPLEMENTATION.md  BIRDEYE_CLIENT.md  CACHING_IMPLEMENTATION.md  CONVERSION_SERVICE.md  Cargo.toml  ERROR_HANDLING_AND_MONITORING.md  INTEGRATION_SUMMARY.md  MESH_API_ENDPOINTS.md  MESH_CHECKPOINT_10_REPORT.md  MESH_CHECKPOINT_REPORT.md  MESH_CONFIGURATION_SUMMARY.md  MESH_MONITORING_IMPLEMENTATION.md  MESH_NETWORK_API_DOCUMENTATION.md  MESH_NETWORK_DEPLOYMENT_GUIDE.md  MESH_PRICE_SERVICE_IMPLEMENTATION.md  PORTFOLIO_MONITOR_IMPLEMENTATION.md  PROVIDER_FAILOVER_IMPLEMENTATION.md  PROXIMITY_API_ENDPOINTS.md  SIDESHIFT_CLIENT.md  STAKING_SERVICE.md  TRIM_EXECUTION.md  WALLET_SERVICE.md  WEBSOCKET_IMPLEMENTATION.md  WHALE_DETECTION_IMPLEMENTATION.md
crates/api/examples/: wallet_demo.rs
crates/api/src/: analytics.rs  auth.rs  benchmark_service.rs  birdeye_service.rs  chat_service.rs  coinmarketcap_service.rs  conversion_service.rs  coordination_service.rs  cross_chain_transaction_service.rs  error.rs  gossip_protocol.rs  handlers.rs  lib.rs  logging.rs  main.rs  mesh_metrics.rs  mesh_price_service.rs  mesh_types.rs  message_tracker.rs  monitoring.rs  network_status_tracker.rs  p2p_service.rs  payment_receipt_service.rs  portfolio_cache.rs  portfolio_monitor.rs  position_evaluator.rs  position_management_service.rs  price_cache.rs  price_monitor.rs  price_update_validator.rs  privacy_service.rs  provider_node.rs  proximity_handlers.rs  proximity_receipt_integration.rs  proximity_service.rs  proximity_websocket.rs  rate_limit.rs  receipt_service.rs  routes.rs  security.rs  (+10 more)
crates/api/tests/: analytics_service_test.rs  auth_integration_test.rs  benchmark_service_test.rs  benchmark_trigger_integration_test.rs  birdeye_cache_test.rs  birdeye_service_test.rs  chat_service_test.rs  conversion_service_test.rs  mesh_integration_test.rs  mesh_price_service_test.rs  p2p_error_scenarios_test.rs  p2p_offer_acceptance_integration_test.rs  p2p_service_test.rs  payment_receipt_service_test.rs  position_evaluator_test.rs  position_management_service_test.rs  privacy_service_test.rs  provider_failover_property_test.rs  provider_failover_test.rs  proximity_endpoints_test.rs  receipt_service_test.rs  sideshift_client_test.rs  staking_service_test.rs  stealth_handlers_test.rs  trim_config_service_test.rs  trim_executor_test.rs  verification_service_test.rs  wallet_service_test.rs  websocket_service_test.rs  whale_detection_test.rs
crates/ble-mesh/: API_DOCUMENTATION.md  Cargo.toml  README.md
crates/ble-mesh/src/: adapter.rs  error.rs  lib.rs  router.rs  stealth_handler.rs  store_forward.rs
crates/blockchain/: Cargo.toml  RETRY_IMPLEMENTATION.md
crates/blockchain/src/: circuit_breaker.rs  client.rs  evm_client.rs  lib.rs  multi_chain.rs  retry.rs  types.rs
crates/blockchain/tests/: integration_test.rs  retry_property_test.rs
crates/database/: Cargo.toml  PROXIMITY_PERSISTENCE.md
crates/database/migrations/: 20240101000001_create_users_table.sql  20240101000002_create_wallets_table.sql  20240101000003_create_portfolio_assets_table.sql  20240101000004_create_whales_table.sql  20240101000005_create_user_whale_tracking_table.sql  20240101000006_create_whale_movements_table.sql  20240101000007_create_recommendations_table.sql  20240101000008_create_trade_executions_table.sql  20240101000009_create_notifications_table.sql  20240101000010_create_notification_preferences_table.sql  20240101000011_create_subscriptions_table.sql  20240101000012_create_user_settings_table.sql  20240101000013_create_portfolio_snapshots_table.sql  20240101000014_create_multi_chain_wallets_table.sql  20240101000015_create_benchmarks_table.sql  20240101000016_create_conversions_table.sql  20240101000017_add_user_tag_to_users.sql  20240101000017_create_staking_positions_table.sql  20240101000018_add_2fa_to_users.sql  20240101000018_create_staking_approval_and_config_tables.sql  20240101000018_create_trim_configs_table.sql  20240101000019_create_trim_executions_table.sql  20240101000020_create_pending_trims_table.sql  20240101000020_create_voice_commands_table.sql  20240101000021_create_blockchain_receipts_table.sql  20240101000022_create_chat_messages_table.sql  20240101000023_create_p2p_offers_table.sql  20240101000024_create_p2p_exchanges_table.sql  20240101000025_add_receipt_retention_policy.sql  20240101000025_create_identity_verifications_table.sql  20240101000026_create_wallet_verifications_table.sql  20240101000027_add_user_tag_column.sql  20240101000028_create_position_modes_table.sql  20240101000029_create_proximity_transfers_table.sql  20240101000030_create_discovery_sessions_table.sql  20240101000031_create_peer_blocklist_table.sql  (+7 more)
crates/database/src/: lib.rs  (+3 more)
crates/monitoring/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  MESSAGE_QUEUE_SETUP.md  README.md  TASK_6.2_IMPLEMENTATION.md
crates/notification/: Cargo.toml
crates/payment/: Cargo.toml
crates/proximity/: Cargo.toml  INTEGRATION_TEST_SUMMARY.md  PLATFORM_ADAPTATIONS.md  TOKEN_ACCOUNT_HANDLING.md
crates/shared/: Cargo.toml
crates/stealth/: API_DOCUMENTATION.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md
crates/trading/: Cargo.toml
(+82 files in other folders)
