[workspace]
members = [
    "crates/blockchain",
    "crates/database",
    "crates/monitoring",
    "crates/ai-service",
    "crates/notification",
    "crates/trading",
    "crates/payment",
    "crates/api",
    "crates/shared",
    "crates/proximity",
    "crates/stealth",
    "crates/ble-mesh",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solana Whale Tracker Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
zeroize = "1.3"
rust_decimal = { version = "1.33", features = ["tokio-pg"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"

# Stripe
async-stripe = { version = "0.34", features = ["runtime-tokio-hyper"] }

# Message Queue (AWS SQS)
aws-config = "1.1"
aws-sdk-sqs = "1.13"
