[package]
name = "ai-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
aws-sdk-sqs = "1.59.0"
