[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
database = { path = "../database" }
deadpool-postgres = "0.14"
redis = "0.24"
tokio-postgres.workspace = true

# Blockchain
blockchain = { path = "../blockchain" }
shared = { path = "../shared" }
proximity = { path = "../proximity" }
stealth = { path = "../stealth" }
ble-mesh = { path = "../ble-mesh" }

# Other services
ai-service = { path = "../ai-service" }
notification = { path = "../notification" }
payment = { path = "../payment" }
trading = { path = "../trading" }
monitoring = { path = "../monitoring" }

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# JWT
jsonwebtoken = "9.2"

# Password hashing
argon2 = "0.5"

# TOTP for 2FA
totp-lite = "2.0"
base32 = "0.4"
qrcode = "0.14"

# Decimal numbers
rust_decimal = { version = "1.33", features = ["serde-float", "db-tokio-postgres"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
solana-sdk = "1.18"

# PDF generation
printpdf = "0.7"

# CSV export
csv = "1.3"

# Stripe
async-stripe = { version = "0.35", features = ["runtime-tokio-hyper"] }

# Environment
dotenv = "0.15"

# LRU cache
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
