[package]
name = "blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-account-decoder = "1.18"
spl-token = "4.0"
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
proptest = "1.4"
