[package]
name = "payment"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
database = { path = "../database" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
async-stripe.workspace = true
thiserror.workspace = true
