[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
dotenv.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
