[package]
name = "stealth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Cryptography
ed25519-dalek = { version = "1.0", features = ["rand_core"] }
curve25519-dalek = { version = "3.2" }
sha2 = "0.10"
chacha20poly1305 = "0.9"
aes-gcm = "0.10"

# Post-quantum cryptography (ML-KEM-768)
# Note: Post-quantum support is optional and will be implemented in task 18
# Using pqc_kyber for Kyber/ML-KEM-768 implementation
pqc_kyber = "0.7"

# Base58 encoding for Kyber public keys
bs58 = "0.5"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Random number generation
rand = "0.8"

# LRU cache for performance optimization
lru = "0.12"

# QR code support
qrcode = "0.14"
image = "0.25"
rqrr = "0.7"

# Platform-specific secure storage
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
# Property-based testing
proptest = "1.4"
tokio = { workspace = true, features = ["test-util"] }
# For ed25519-dalek compatibility in tests
rand_07 = { package = "rand", version = "0.7" }
# BLE mesh for integration tests
ble-mesh = { path = "../ble-mesh" }
