[package]
name = "trading"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
database = { path = "../database" }
notification = { path = "../notification" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
